--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,10 +5,6 @@ trigger:
 pool: default
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: Bash@3
+  inputs:
+    filePath: 'Lab-01/src/test.sh'
