--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,5 +7,5 @@ pool: default
 steps:
 - task: Bash@3
   inputs:
-    filePath: 'test.sh'
+    filePath: 'Lab-01/src/test.sh'
     workingDirectory: 'Lab-01/src/'
